syntax="proto3";
option go_package=  "/protobuf";

package protobuf;

message RequestMenu{
  string err = 1;
}

message ReplyMenu{
  string ID = 1;
  repeated string Category = 2;
  string Name = 3;
  repeated MenuIngredient Ingredient = 4;
  int64 Price = 5;
  bool Available = 6;
}

message MenuIngredient {
  string IngredientName = 1;
  int64 Amount = 2;
}

service SendMenu{
  rpc SendMenu (RequestMenu) returns (ReplyMenu);
}